compiler/tests/snapshots/snapshot_codegen__example_pdl.snap
---
source: compiler/tests/snapshot_codegen.rs
expression: cpp
---
// Generated by pcc (Pipit Compiler Collection)
#include <pipit.h>
#include <atomic>
#include <cerrno>
#include <cmath>
#include <chrono>
#include <csignal>
#include <cstdio>
#include <cstring>
#include <limits>
#include <string>
#include <thread>
#include <unordered_set>
#include <vector>

static constexpr float _const_coeff[] = {0.1f, 0.2f, 0.4f, 0.2f, 0.1f};
static constexpr auto _const_fft_size = 256;

static std::atomic<int> _param_gain_write(1);
static std::atomic<int> _param_gain_read(1);

static pipit::RingBuffer<float, 512, 1> _ringbuf_signal;

static std::atomic<bool> _stop{false};
static std::atomic<int> _exit_code{0};
static std::atomic<bool> _start{false};

static bool _stats = false;
static pipit::TaskStats _stats_capture;
static pipit::TaskStats _stats_drain;
static FILE* _probe_output_file = nullptr;
static bool _probe_filtered_enabled = false;

void task_capture() {
    while (!_start.load(std::memory_order_acquire)) { std::this_thread::yield(); }
    pipit::Timer _timer(10000.0, _stats, 10000);
    pipit::detail::set_actor_task_rate_hz(10000000.0);
    uint64_t _iter_idx = 0;
    while (!_stop.load(std::memory_order_acquire)) {
        _timer.wait();
        if (_timer.overrun()) { if (_stats) _stats_capture.record_miss(); continue; }
        if (_stats) _stats_capture.record_tick(_timer.last_latency());
        auto _actor_0 = Actor_constant<float>{0, 256};
        auto _actor_2 = Actor_fft{256};
        auto _actor_4 = Actor_c2r{256};
        auto _actor_8 = Actor_mag{256};
        auto _actor_5 = Actor_fir<float>{std::span<const float>(_const_coeff, 5), 5};
        auto _actor_9 = Actor_stdout<float>{};
        for (int _k = 0; _k < 1000; ++_k) {
            pipit::detail::set_actor_iteration_index(_iter_idx++);
            _param_gain_read.store(_param_gain_write.load(std::memory_order_acquire), std::memory_order_release);
            int _param_gain_val = _param_gain_read.load(std::memory_order_acquire);
            static float _e0_1[1280];
            static float _e1_2[1280];
            static cfloat _e2_3[1280];
            static float _e4_5[1280];
            static float _e5_6[256];
            static float _e8_9[1280];
            auto _actor_1 = Actor_mul<float>{_param_gain_val, 256};
            // fork: raw (zero-copy)
            for (int _r = 0; _r < 5; ++_r) {
                if (_actor_0.operator()(nullptr, &_e0_1[_r * 256]) != ACTOR_OK) {
                    fprintf(stderr, "runtime error: actor 'constant' in task 'capture' returned ACTOR_ERROR\n");
                    _exit_code.store(1, std::memory_order_release);
                    _stop.store(true, std::memory_order_release);
                    return;
                }
                if (_actor_1.operator()(&_e0_1[_r * 256], &_e1_2[_r * 256]) != ACTOR_OK) {
                    fprintf(stderr, "runtime error: actor 'mul' in task 'capture' returned ACTOR_ERROR\n");
                    _exit_code.store(1, std::memory_order_release);
                    _stop.store(true, std::memory_order_release);
                    return;
                }
                if (_actor_2.operator()(&_e1_2[_r * 256], &_e2_3[_r * 256]) != ACTOR_OK) {
                    fprintf(stderr, "runtime error: actor 'fft' in task 'capture' returned ACTOR_ERROR\n");
                    _exit_code.store(1, std::memory_order_release);
                    _stop.store(true, std::memory_order_release);
                    return;
                }
                if (_actor_4.operator()(&_e2_3[_r * 256], &_e4_5[_r * 256]) != ACTOR_OK) {
                    fprintf(stderr, "runtime error: actor 'c2r' in task 'capture' returned ACTOR_ERROR\n");
                    _exit_code.store(1, std::memory_order_release);
                    _stop.store(true, std::memory_order_release);
                    return;
                }
                if (_actor_8.operator()(&_e2_3[_r * 256], &_e8_9[_r * 256]) != ACTOR_OK) {
                    fprintf(stderr, "runtime error: actor 'mag' in task 'capture' returned ACTOR_ERROR\n");
                    _exit_code.store(1, std::memory_order_release);
                    _stop.store(true, std::memory_order_release);
                    return;
                }
            }
            for (int _r = 0; _r < 256; ++_r) {
                if (_actor_5.operator()(&_e4_5[_r * 5], &_e5_6[_r * 1]) != ACTOR_OK) {
                    fprintf(stderr, "runtime error: actor 'fir' in task 'capture' returned ACTOR_ERROR\n");
                    _exit_code.store(1, std::memory_order_release);
                    _stop.store(true, std::memory_order_release);
                    return;
                }
            }
            for (int _r = 0; _r < 1280; ++_r) {
                if (_actor_9.operator()(&_e8_9[_r * 1], nullptr) != ACTOR_OK) {
                    fprintf(stderr, "runtime error: actor 'stdout' in task 'capture' returned ACTOR_ERROR\n");
                    _exit_code.store(1, std::memory_order_release);
                    _stop.store(true, std::memory_order_release);
                    return;
                }
            }
            #ifndef NDEBUG
            if (_probe_filtered_enabled) {
                for (int _pi = 0; _pi < 256; ++_pi)
                    fprintf(_probe_output_file, "[probe:filtered] %f\n", (_e5_6)[_pi]);
                fflush(_probe_output_file);
            }
            #endif
            int _rb_retry_6_7 = 0;
            while (true) {
                if (!_ringbuf_signal.write(_e5_6, 256)) {
                    if (_stop.load(std::memory_order_acquire)) {
                        return;
                    }
                    if (++_rb_retry_6_7 < 1000000) {
                        std::this_thread::yield();
                        continue;
                    }
                    std::fprintf(stderr, "runtime error: task 'capture' failed to write 256 token(s) to shared buffer 'signal'\n");
                    _exit_code.store(1, std::memory_order_release);
                    _stop.store(true, std::memory_order_release);
                    return;
                }
                break;
            }
        }
    }
}

void task_drain() {
    while (!_start.load(std::memory_order_acquire)) { std::this_thread::yield(); }
    pipit::Timer _timer(10000.0, _stats, 10000);
    pipit::detail::set_actor_task_rate_hz(10000000.0);
    uint64_t _iter_idx = 0;
    while (!_stop.load(std::memory_order_acquire)) {
        _timer.wait();
        if (_timer.overrun()) { if (_stats) _stats_drain.record_miss(); continue; }
        if (_stats) _stats_drain.record_tick(_timer.last_latency());
        auto _actor_11 = Actor_decimate<float>{256};
        auto _actor_12 = Actor_csvwrite{"output.csv"};
        for (int _k = 0; _k < 1000; ++_k) {
            pipit::detail::set_actor_iteration_index(_iter_idx++);
            static float _e10_11[256];
            static float _e11_12[1];
            int _rb_retry_10_11 = 0;
            while (true) {
                if (!_ringbuf_signal.read(0, _e10_11, 256)) {
                    if (_stop.load(std::memory_order_acquire)) {
                        return;
                    }
                    if (++_rb_retry_10_11 < 1000000) {
                        std::this_thread::yield();
                        continue;
                    }
                    std::fprintf(stderr, "runtime error: task 'drain' failed to read 256 token(s) from shared buffer 'signal'\n");
                    _exit_code.store(1, std::memory_order_release);
                    _stop.store(true, std::memory_order_release);
                    return;
                }
                break;
            }
            if (_actor_11.operator()(_e10_11, _e11_12) != ACTOR_OK) {
                fprintf(stderr, "runtime error: actor 'decimate' in task 'drain' returned ACTOR_ERROR\n");
                _exit_code.store(1, std::memory_order_release);
                _stop.store(true, std::memory_order_release);
                return;
            }
            if (_actor_12.operator()(_e11_12, nullptr) != ACTOR_OK) {
                fprintf(stderr, "runtime error: actor 'csvwrite' in task 'drain' returned ACTOR_ERROR\n");
                _exit_code.store(1, std::memory_order_release);
                _stop.store(true, std::memory_order_release);
                return;
            }
        }
    }
}

int main(int argc, char* argv[]) {
    double _duration_seconds = std::numeric_limits<double>::infinity();
    int _threads = 0;
    std::string _probe_output = "/dev/stderr";
    std::vector<std::string> _enabled_probes;

    auto _parse_duration = [](const std::string& s, double* out) -> bool {
        if (s == "inf") { *out = std::numeric_limits<double>::infinity(); return true; }
        std::size_t pos = 0;
        double base = 0.0;
        try {
            base = std::stod(s, &pos);
        } catch (...) {
            return false;
        }
        std::string unit = s.substr(pos);
        if (unit.empty() || unit == "s") { *out = base; return true; }
        if (unit == "m") { *out = base * 60.0; return true; }
        return false;
    };

    for (int i = 1; i < argc; ++i) {
        std::string opt(argv[i]);
        if (opt == "--param") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --param requires name=value\\n");
                return 2;
            }
            std::string arg(argv[++i]);
            auto eq = arg.find('=');
            if (eq == std::string::npos) {
                std::fprintf(stderr, "startup error: --param requires name=value\\n");
                return 2;
            }
            auto name = arg.substr(0, eq);
            auto val = arg.substr(eq + 1);
            if (name == "gain") _param_gain_write.store(std::stoi(val), std::memory_order_release);
            else {
                std::fprintf(stderr, "startup error: unknown param '%s'\\n", name.c_str());
                return 2;
            }
            continue;
        }
        if (opt == "--duration") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --duration requires a value\\n");
                return 2;
            }
            std::string d(argv[++i]);
            if (!_parse_duration(d, &_duration_seconds)) {
                std::fprintf(stderr, "startup error: invalid --duration '%s' (use <sec>, <sec>s, <min>m, or inf)\\n", d.c_str());
                return 2;
            }
            continue;
        }
        if (opt == "--threads") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --threads requires a positive integer\\n");
                return 2;
            }
            try {
                _threads = std::stoi(std::string(argv[++i]));
            } catch (...) {
                std::fprintf(stderr, "startup error: --threads requires a positive integer\\n");
                return 2;
            }
            if (_threads <= 0) {
                std::fprintf(stderr, "startup error: --threads requires a positive integer\\n");
                return 2;
            }
            continue;
        }
        if (opt == "--probe") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --probe requires a name\\n");
                return 2;
            }
            _enabled_probes.emplace_back(argv[++i]);
            continue;
        }
        if (opt == "--probe-output") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --probe-output requires a path\\n");
                return 2;
            }
            _probe_output = std::string(argv[++i]);
            continue;
        }
        if (opt == "--stats") {
            _stats = true;
            continue;
        }
        std::fprintf(stderr, "startup error: unknown option '%s'\\n", argv[i]);
        return 2;
    }

    // Probe initialization
    #ifndef NDEBUG
    if (!_enabled_probes.empty() || _probe_output != "/dev/stderr") {
        std::unordered_set<std::string> _valid_probes = {"filtered"};
        for (const auto& name : _enabled_probes) {
            if (_valid_probes.find(name) == _valid_probes.end()) {
                std::fprintf(stderr, "startup error: unknown probe '%s'\\n", name.c_str());
                return 2;
            }
            if (name == "filtered") _probe_filtered_enabled = true;
        }
        _probe_output_file = std::fopen(_probe_output.c_str(), "w");
        if (!_probe_output_file) {
                std::fprintf(stderr, "startup error: failed to open probe output file '%s': %s\\n",
                            _probe_output.c_str(), std::strerror(errno));
                return 2;
        }
    }
    #endif

    std::signal(SIGINT, [](int) { _stop.store(true, std::memory_order_release); });

    std::thread _t0(task_capture);
    std::thread _t1(task_drain);
    _start.store(true, std::memory_order_release);

    if (std::isfinite(_duration_seconds)) {
        std::this_thread::sleep_for(std::chrono::duration<double>(_duration_seconds));
        _stop.store(true, std::memory_order_release);
    } else {
        // Run until SIGINT
        while (!_stop.load(std::memory_order_acquire))
            std::this_thread::sleep_for(std::chrono::milliseconds(100));
    }

    _t0.join();
    _t1.join();

    if (_threads > 0 && _threads < 2) {
        std::fprintf(stderr, "startup warning: --threads is advisory (requested=%d, tasks=2)\\n", _threads);
    }

    if (_stats) {
        fprintf(stderr, "[stats] task 'capture': ticks=%lu, missed=%lu (drop), max_latency=%ldns, avg_latency=%ldns\n",
(unsigned long)_stats_capture.ticks, (unsigned long)_stats_capture.missed,
_stats_capture.max_latency_ns, _stats_capture.avg_latency_ns());
        fprintf(stderr, "[stats] task 'drain': ticks=%lu, missed=%lu (drop), max_latency=%ldns, avg_latency=%ldns\n",
(unsigned long)_stats_drain.ticks, (unsigned long)_stats_drain.missed,
_stats_drain.max_latency_ns, _stats_drain.avg_latency_ns());
        fprintf(stderr, "[stats] shared buffer 'signal': %zu tokens (%zuB)\n",
(size_t)_ringbuf_signal.available(), _ringbuf_signal.available() * sizeof(float));
        fprintf(stderr, "[stats] memory pool: %zuB allocated, %zuB used\n", (size_t)67108864, (size_t)2048);
    }
    return _exit_code.load(std::memory_order_acquire);
}
