compiler/tests/snapshots/snapshot_codegen__feedback_pdl.snap
---
source: compiler/tests/snapshot_codegen.rs
expression: cpp
---
// Generated by pcc (Pipit Compiler Collection)
#include <pipit.h>
#include <atomic>
#include <cerrno>
#include <cmath>
#include <chrono>
#include <csignal>
#include <cstdio>
#include <cstring>
#include <limits>
#include <string>
#include <thread>
#include <unordered_set>
#include <vector>

static std::atomic<float> _param_alpha_write(0.5f);
static std::atomic<float> _param_alpha_read(0.5f);

static std::atomic<bool> _stop{false};
static std::atomic<int> _exit_code{0};
static std::atomic<bool> _start{false};

static bool _stats = false;
static pipit::TaskStats _stats_iir;
static FILE* _probe_output_file = nullptr;
static bool _probe_tap_enabled = false;

void task_iir() {
    while (!_start.load(std::memory_order_acquire)) { std::this_thread::yield(); }
    pipit::Timer _timer(1000.0, _stats, 10000);
    pipit::detail::set_actor_task_rate_hz(1000.0);
    uint64_t _iter_idx = 0;
    float _fb_6_7[1] = {0};
    while (!_stop.load(std::memory_order_acquire)) {
        _timer.wait();
        if (_timer.overrun()) { if (_stats) _stats_iir.record_miss(); continue; }
        if (_stats) _stats_iir.record_tick(_timer.last_latency());
        auto _actor_0 = Actor_constant<float>{0, 1};
        auto _actor_6 = Actor_delay<float>{1, 0};
        auto _actor_5 = Actor_stdout<float>{};
        pipit::detail::set_actor_iteration_index(_iter_idx++);
        _param_alpha_read.store(_param_alpha_write.load(std::memory_order_acquire), std::memory_order_release);
        float _param_alpha_val = _param_alpha_read.load(std::memory_order_acquire);
        static float _e0_1[1];
        static float _e1_2[1];
        static float _e2_3[1];
        if (_actor_0.operator()(nullptr, _e0_1) != ACTOR_OK) {
            fprintf(stderr, "runtime error: actor 'constant' in task 'iir' returned ACTOR_ERROR\n");
            _exit_code.store(1, std::memory_order_release);
            _stop.store(true, std::memory_order_release);
            return;
        }
        // fork: fb (zero-copy)
        float _in_1[2];
        _in_1[0] = (_e0_1)[0];
        _in_1[1] = (_fb_6_7)[0];
        if (Actor_add<float>{}(_in_1, _e1_2) != ACTOR_OK) {
            fprintf(stderr, "runtime error: actor 'add' in task 'iir' returned ACTOR_ERROR\n");
            _exit_code.store(1, std::memory_order_release);
            _stop.store(true, std::memory_order_release);
            return;
        }
        if (Actor_mul<float>{_param_alpha_val, 1}.operator()(_e1_2, _e2_3) != ACTOR_OK) {
            fprintf(stderr, "runtime error: actor 'mul' in task 'iir' returned ACTOR_ERROR\n");
            _exit_code.store(1, std::memory_order_release);
            _stop.store(true, std::memory_order_release);
            return;
        }
        // fork: out (zero-copy)
        #ifndef NDEBUG
        if (_probe_tap_enabled) {
            for (int _pi = 0; _pi < 1; ++_pi)
                fprintf(_probe_output_file, "[probe:tap] %f\n", (_e2_3)[_pi]);
            fflush(_probe_output_file);
        }
        #endif
        if (_actor_6.operator()(_e2_3, _fb_6_7) != ACTOR_OK) {
            fprintf(stderr, "runtime error: actor 'delay' in task 'iir' returned ACTOR_ERROR\n");
            _exit_code.store(1, std::memory_order_release);
            _stop.store(true, std::memory_order_release);
            return;
        }
        if (_actor_5.operator()(_e2_3, nullptr) != ACTOR_OK) {
            fprintf(stderr, "runtime error: actor 'stdout' in task 'iir' returned ACTOR_ERROR\n");
            _exit_code.store(1, std::memory_order_release);
            _stop.store(true, std::memory_order_release);
            return;
        }
    }
}

int main(int argc, char* argv[]) {
    double _duration_seconds = std::numeric_limits<double>::infinity();
    int _threads = 0;
    std::string _probe_output = "/dev/stderr";
    std::vector<std::string> _enabled_probes;

    auto _parse_duration = [](const std::string& s, double* out) -> bool {
        if (s == "inf") { *out = std::numeric_limits<double>::infinity(); return true; }
        std::size_t pos = 0;
        double base = 0.0;
        try {
            base = std::stod(s, &pos);
        } catch (...) {
            return false;
        }
        std::string unit = s.substr(pos);
        if (unit.empty() || unit == "s") { *out = base; return true; }
        if (unit == "m") { *out = base * 60.0; return true; }
        return false;
    };

    for (int i = 1; i < argc; ++i) {
        std::string opt(argv[i]);
        if (opt == "--param") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --param requires name=value\\n");
                return 2;
            }
            std::string arg(argv[++i]);
            auto eq = arg.find('=');
            if (eq == std::string::npos) {
                std::fprintf(stderr, "startup error: --param requires name=value\\n");
                return 2;
            }
            auto name = arg.substr(0, eq);
            auto val = arg.substr(eq + 1);
            if (name == "alpha") _param_alpha_write.store(std::stof(val), std::memory_order_release);
            else {
                std::fprintf(stderr, "startup error: unknown param '%s'\\n", name.c_str());
                return 2;
            }
            continue;
        }
        if (opt == "--duration") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --duration requires a value\\n");
                return 2;
            }
            std::string d(argv[++i]);
            if (!_parse_duration(d, &_duration_seconds)) {
                std::fprintf(stderr, "startup error: invalid --duration '%s' (use <sec>, <sec>s, <min>m, or inf)\\n", d.c_str());
                return 2;
            }
            continue;
        }
        if (opt == "--threads") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --threads requires a positive integer\\n");
                return 2;
            }
            try {
                _threads = std::stoi(std::string(argv[++i]));
            } catch (...) {
                std::fprintf(stderr, "startup error: --threads requires a positive integer\\n");
                return 2;
            }
            if (_threads <= 0) {
                std::fprintf(stderr, "startup error: --threads requires a positive integer\\n");
                return 2;
            }
            continue;
        }
        if (opt == "--probe") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --probe requires a name\\n");
                return 2;
            }
            _enabled_probes.emplace_back(argv[++i]);
            continue;
        }
        if (opt == "--probe-output") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --probe-output requires a path\\n");
                return 2;
            }
            _probe_output = std::string(argv[++i]);
            continue;
        }
        if (opt == "--stats") {
            _stats = true;
            continue;
        }
        std::fprintf(stderr, "startup error: unknown option '%s'\\n", argv[i]);
        return 2;
    }

    // Probe initialization
    #ifndef NDEBUG
    if (!_enabled_probes.empty() || _probe_output != "/dev/stderr") {
        std::unordered_set<std::string> _valid_probes = {"tap"};
        for (const auto& name : _enabled_probes) {
            if (_valid_probes.find(name) == _valid_probes.end()) {
                std::fprintf(stderr, "startup error: unknown probe '%s'\\n", name.c_str());
                return 2;
            }
            if (name == "tap") _probe_tap_enabled = true;
        }
        _probe_output_file = std::fopen(_probe_output.c_str(), "w");
        if (!_probe_output_file) {
                std::fprintf(stderr, "startup error: failed to open probe output file '%s': %s\\n",
                            _probe_output.c_str(), std::strerror(errno));
                return 2;
        }
    }
    #endif

    std::signal(SIGINT, [](int) { _stop.store(true, std::memory_order_release); });

    std::thread _t0(task_iir);
    _start.store(true, std::memory_order_release);

    if (std::isfinite(_duration_seconds)) {
        std::this_thread::sleep_for(std::chrono::duration<double>(_duration_seconds));
        _stop.store(true, std::memory_order_release);
    } else {
        // Run until SIGINT
        while (!_stop.load(std::memory_order_acquire))
            std::this_thread::sleep_for(std::chrono::milliseconds(100));
    }

    _t0.join();

    if (_stats) {
        fprintf(stderr, "[stats] task 'iir': ticks=%lu, missed=%lu (drop), max_latency=%ldns, avg_latency=%ldns\n",
(unsigned long)_stats_iir.ticks, (unsigned long)_stats_iir.missed,
_stats_iir.max_latency_ns, _stats_iir.avg_latency_ns());
        fprintf(stderr, "[stats] memory pool: %zuB allocated, %zuB used\n", (size_t)16777216, (size_t)0);
    }
    return _exit_code.load(std::memory_order_acquire);
}
