compiler/tests/snapshots/snapshot_codegen__multirate_pdl.snap
---
source: compiler/tests/snapshot_codegen.rs
expression: cpp
---
// Generated by pcc (Pipit Compiler Collection)
#include <pipit.h>
#include <atomic>
#include <cerrno>
#include <cmath>
#include <chrono>
#include <csignal>
#include <cstdio>
#include <cstring>
#include <limits>
#include <string>
#include <thread>
#include <unordered_set>
#include <vector>

static constexpr float _const_lp_coeff[] = {0.25f, 0.5f, 0.25f};

static std::atomic<bool> _stop{false};
static std::atomic<int> _exit_code{0};
static std::atomic<bool> _start{false};

static bool _stats = false;
static pipit::TaskStats _stats_analyzer;

void task_analyzer() {
    while (!_start.load(std::memory_order_acquire)) { std::this_thread::yield(); }
    pipit::Timer _timer(1000.0, _stats, 10000);
    pipit::detail::set_actor_task_rate_hz(1000.0);
    uint64_t _iter_idx = 0;
    while (!_stop.load(std::memory_order_acquire)) {
        _timer.wait();
        if (_timer.overrun()) { if (_stats) _stats_analyzer.record_miss(); continue; }
        if (_stats) _stats_analyzer.record_tick(_timer.last_latency());
        auto _actor_0 = Actor_constant<float>{0, 3};
        auto _actor_2 = Actor_fir<float>{std::span<const float>(_const_lp_coeff, 3), 3};
        auto _actor_4 = Actor_fft{64};
        auto _actor_3 = Actor_stdout<float>{};
        auto _actor_5 = Actor_mag{64};
        auto _actor_6 = Actor_stdout<float>{};
        pipit::detail::set_actor_iteration_index(_iter_idx += 192);
        static float _e0_1[192];
        static float _e2_3[64];
        static cfloat _e4_5[192];
        static float _e5_6[192];
        // fork: sig (zero-copy)
        for (int _r = 0; _r < 64; ++_r) {
            if (_actor_0.operator()(nullptr, &_e0_1[_r * 3]) != ACTOR_OK) {
                fprintf(stderr, "runtime error: actor 'constant' in task 'analyzer' returned ACTOR_ERROR\n");
                _exit_code.store(1, std::memory_order_release);
                _stop.store(true, std::memory_order_release);
                return;
            }
            if (_actor_2.operator()(&_e0_1[_r * 3], &_e2_3[_r * 1]) != ACTOR_OK) {
                fprintf(stderr, "runtime error: actor 'fir' in task 'analyzer' returned ACTOR_ERROR\n");
                _exit_code.store(1, std::memory_order_release);
                _stop.store(true, std::memory_order_release);
                return;
            }
        }
        for (int _r = 0; _r < 3; ++_r) {
            if (_actor_4.operator()(&_e0_1[_r * 64], &_e4_5[_r * 64]) != ACTOR_OK) {
                fprintf(stderr, "runtime error: actor 'fft' in task 'analyzer' returned ACTOR_ERROR\n");
                _exit_code.store(1, std::memory_order_release);
                _stop.store(true, std::memory_order_release);
                return;
            }
        }
        for (int _r = 0; _r < 64; ++_r) {
            if (_actor_3.operator()(&_e2_3[_r * 1], nullptr) != ACTOR_OK) {
                fprintf(stderr, "runtime error: actor 'stdout' in task 'analyzer' returned ACTOR_ERROR\n");
                _exit_code.store(1, std::memory_order_release);
                _stop.store(true, std::memory_order_release);
                return;
            }
        }
        for (int _r = 0; _r < 3; ++_r) {
            if (_actor_5.operator()(&_e4_5[_r * 64], &_e5_6[_r * 64]) != ACTOR_OK) {
                fprintf(stderr, "runtime error: actor 'mag' in task 'analyzer' returned ACTOR_ERROR\n");
                _exit_code.store(1, std::memory_order_release);
                _stop.store(true, std::memory_order_release);
                return;
            }
        }
        for (int _r = 0; _r < 192; ++_r) {
            if (_actor_6.operator()(&_e5_6[_r * 1], nullptr) != ACTOR_OK) {
                fprintf(stderr, "runtime error: actor 'stdout' in task 'analyzer' returned ACTOR_ERROR\n");
                _exit_code.store(1, std::memory_order_release);
                _stop.store(true, std::memory_order_release);
                return;
            }
        }
    }
}

int main(int argc, char* argv[]) {
    double _duration_seconds = std::numeric_limits<double>::infinity();
    int _threads = 0;
    std::string _probe_output = "/dev/stderr";
    std::vector<std::string> _enabled_probes;

    auto _parse_duration = [](const std::string& s, double* out) -> bool {
        if (s == "inf") { *out = std::numeric_limits<double>::infinity(); return true; }
        std::size_t pos = 0;
        double base = 0.0;
        try {
            base = std::stod(s, &pos);
        } catch (...) {
            return false;
        }
        std::string unit = s.substr(pos);
        if (unit.empty() || unit == "s") { *out = base; return true; }
        if (unit == "m") { *out = base * 60.0; return true; }
        return false;
    };

    for (int i = 1; i < argc; ++i) {
        std::string opt(argv[i]);
        if (opt == "--param") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --param requires name=value\\n");
                return 2;
            }
            std::string arg(argv[++i]);
            auto eq = arg.find('=');
            if (eq == std::string::npos) {
                std::fprintf(stderr, "startup error: --param requires name=value\\n");
                return 2;
            }
            auto name = arg.substr(0, eq);
            auto val = arg.substr(eq + 1);
            std::fprintf(stderr, "startup error: --param is unsupported (no runtime params)\\n");
            return 2;
            continue;
        }
        if (opt == "--duration") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --duration requires a value\\n");
                return 2;
            }
            std::string d(argv[++i]);
            if (!_parse_duration(d, &_duration_seconds)) {
                std::fprintf(stderr, "startup error: invalid --duration '%s' (use <sec>, <sec>s, <min>m, or inf)\\n", d.c_str());
                return 2;
            }
            continue;
        }
        if (opt == "--threads") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --threads requires a positive integer\\n");
                return 2;
            }
            try {
                _threads = std::stoi(std::string(argv[++i]));
            } catch (...) {
                std::fprintf(stderr, "startup error: --threads requires a positive integer\\n");
                return 2;
            }
            if (_threads <= 0) {
                std::fprintf(stderr, "startup error: --threads requires a positive integer\\n");
                return 2;
            }
            continue;
        }
        if (opt == "--probe") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --probe requires a name\\n");
                return 2;
            }
            _enabled_probes.emplace_back(argv[++i]);
            continue;
        }
        if (opt == "--probe-output") {
            if (i + 1 >= argc) {
                std::fprintf(stderr, "startup error: --probe-output requires a path\\n");
                return 2;
            }
            _probe_output = std::string(argv[++i]);
            continue;
        }
        if (opt == "--stats") {
            _stats = true;
            continue;
        }
        std::fprintf(stderr, "startup error: unknown option '%s'\\n", argv[i]);
        return 2;
    }

    std::signal(SIGINT, [](int) { _stop.store(true, std::memory_order_release); });

    std::thread _t0(task_analyzer);
    _start.store(true, std::memory_order_release);

    if (std::isfinite(_duration_seconds)) {
        std::this_thread::sleep_for(std::chrono::duration<double>(_duration_seconds));
        _stop.store(true, std::memory_order_release);
    } else {
        // Run until SIGINT
        while (!_stop.load(std::memory_order_acquire))
            std::this_thread::sleep_for(std::chrono::milliseconds(100));
    }

    _t0.join();

    if (_stats) {
        fprintf(stderr, "[stats] task 'analyzer': ticks=%lu, missed=%lu (drop), max_latency=%ldns, avg_latency=%ldns\n",
(unsigned long)_stats_analyzer.ticks, (unsigned long)_stats_analyzer.missed,
_stats_analyzer.max_latency_ns, _stats_analyzer.avg_latency_ns());
        fprintf(stderr, "[stats] memory pool: %zuB allocated, %zuB used\n", (size_t)67108864, (size_t)0);
    }
    return _exit_code.load(std::memory_order_acquire);
}
